# Student-Ignite

./: .gitignore  Main.py  README.md  app.py  client_secret_717425861038-kiaha0986f92ugivrgg4evcqvem8718a.apps.googleusercontent.com.json  client_secrets.json  package.json  pydrive test.py  requirements.txt  server.py  student-ignite-65ece114863e.json
Face-Biometric/: .gitignore  Testing.py
NudityFilter/: Classifier.py
Qt Project/Student-Ignite/: CMakeLists.txt  main.cpp
Qt Project/build-Student-Ignite-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Qt Projects/Ignite-Main-Window/: form.ui
Qt Projects/Student-Ignite/: form.ui  mainwindow.py
Qt Projects/Student-Ignite2/: CMakeLists.txt  main.cpp
Qt Projects/build-Student-Ignite2-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appstudent-ignite2_qmltyperegistrations.cpp  build.ninja  (+1 more)
Student-Connect/: README.md  uploader.py
app/: GUI.py  Home.ui  Ignite.py  IgniteBrowserCache.txt  Lib.py  RUN THIS TO START THE IGNITE MODULE.py  Screen Capture Background Process.py  block.html  browser launcher.py  browser.py  proxy_server.py  pthread.py  tag.db  tag.py  temp.pyw  ui_Home.h
experiments/: Create_root.py  credentials.json  settings.yaml  temp.py  test.py  upload.py  webstreaming.py
mitmproxy/: addon.py  addonlauncher.py  mitmproxy-ca-cert.p12  new.py
pcxy/: proxy_server.py  pthread.py  rule.py  tag.db
proxy/: block.html  proxy_server.py  temp.py
server/: main.py
trash/: failedProxy.py  require.txt
(+137 files in other folders)
